--- a/config.json
+++ b/config.json
@@ -32,5 +32,6 @@
             "reverse": "BR6_13592_AGTTCC_L001_R2_001_BHYFTLADXX.filt.fastq.gz"
         }
     },
-    "adapters_fasta": "/zfs/datastore0/software/src/Trimmomatic-0.30/adapters/TruSeq3-PE.fa"
+    "adapters_fasta": "/zfs/datastore0/software/src/Trimmomatic-0.30/adapters/TruSeq3-PE.fa",
+    "trimmomatic_params":"ILLUMINACLIP:TruSeq3-PE.fa:2:30:10 LEADING:10 TRAILING:10 SLIDINGWINDOW:4:15 MINLEN:50"
 }
