--- a/config.json
+++ b/config.json
@@ -1,19 +1,5 @@
 {
     "basedir": "/home/mgalland/data/01_sequencing_runs/20151013_72523_InHolland/",
-    "samples": {
-        "BR3": [
-            "BR3"
-        ],
-        "BR4": [
-            "BR4"
-        ],
-        "BR5": [
-            "BR5"
-        ],
-        "BR6": [
-            "BR6"
-        ]
-    },
     "data": {
         "BR3": {
             "forward": "BR3_13589_TAGCTT_L001_R1_001_BHYFTLADXX.filt.fastq.gz",
@@ -33,6 +19,28 @@
         }
     },
     "adapters_fasta": "/zfs/datastore0/software/src/Trimmomatic-0.30/adapters/TruSeq3-PE.fa",
-    "trimmomatic_params":"ILLUMINACLIP:TruSeq3-PE.fa:2:30:10 LEADING:10 TRAILING:10 SLIDINGWINDOW:4:15 MINLEN:50",
-    "trinity_params":"--SS_lib_type RF --max_memory 20G --CPU 8 --min_contig_length 200 --full_cleanup" 
+    "trimmomatic": {
+        "jar": "/zfs/datastore0/software/src/Trimmomatic-0.30/trimmomatic-0.30.jar",
+        "params": "ILLUMINACLIP:TruSeq3-PE.fa:2:30:10 LEADING:10 TRAILING:10 SLIDINGWINDOW:4:15 MINLEN:50"
+    },
+    "trinity": {
+        "assembly_params": "--SS_lib_type RF --max_memory 20G --CPU 3 --min_contig_length 200 --full_cleanup",
+        "estimate_abundance": "/zfs/datastore0/software/src/trinityrnaseq/util/align_and_estimate_abundance.pl",
+        "abundance_params": "--aln_method bowtie2 --SS_lib_type RF --est_method eXpress --trinity_mode --prep_reference"
+    },
+    "blast": {
+        "dir": "/home/mgalland/blastdb/"
+    },
+    "blastn": {
+        "db": "/home/mgalland/blastdb/nt",
+        "max_target_seqs": "1",
+        "num_threads": "8",
+        "outfmt": "'6 qseqid qlen sseqid stitle slen pident evalue bitscore length'",
+        "max_hsps": "1"
+    },
+    "transdecoder": {
+        "dir": "/zfs/datastore0/software/src/trinityrnaseq_r20140413p1/trinity-plugins/TransDecoder_r20131110/TransDecoder",
+        "min_prot_length": "-m 200",
+        "min_orf_nucleotide_length": "--retain_long_orfs 900"
+    }
 }
